5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1590_2895.log
== TEST (2019-03-20 15:08:08) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:08:25) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
total= var
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:08:36) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
total= var
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:08:42) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
total= var
print("total")
-- EXECUTION TIME:
0.197791
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
total
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
total
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:08:43) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
total= var
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:12) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
print("varl")
-- OUTPUT:
varl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:09:14) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
print("varl")
-- EXECUTION TIME:
0.130685
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
varl
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
varl
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
varl
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:15) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
print("varl")
-- OUTPUT:
varl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:10:28) 
-- CODE:
var= float(input("Quantidade de jogos"))

print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:10:32) 
-- CODE:
var= float(input("Quantidade de jogos"))

print("var")
-- EXECUTION TIME:
0.161904
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
var
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
var
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:10:33) 
-- CODE:
var= float(input("Quantidade de jogos"))

print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:11:06) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))

print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:11:12) 
-- CODE:
var= float(input("Quantidade de jogos+Valor unitario+Valor do frete"))
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:11:32) 
-- CODE:
var= float(input("45+45+45"))
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:11:50) 
-- CODE:
var= float(input("45+45+45"))
total= int(var)
print("var")
-- OUTPUT:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:13) 
-- CODE:
var= float(input("45+45+45"))
total= var
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:14:27) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input(var+valor unitario))
var2= float(input(var1+valor do frete))
total= var2
print("var2")
-- ERROR:
File "XXXX", line 2
    var1= float(input(var+valor unitario))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:14:42) 
-- CODE:
var= float(input("quantidade de jogos"))
var= float(input(var+valor unitario))
var2= float(input(var1+valor do frete))
total= var2
print("var2")
-- ERROR:
File "XXXX", line 2
    var= float(input(var+valor unitario))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:15:27) 
-- CODE:
var= float(input("quantidade de jogos"))
total= float(input(var+valor unitario))
var2= float(input(var1+valor do frete))
total= var2
print("var2")
-- ERROR:
File "XXXX", line 2
    total= float(input(var+valor unitario))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:17:58) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input(var+valor unitario))
var2= float(input(var1+valor do frete))
total= var2
print("var2")
-- ERROR:
File "XXXX", line 2
    var1= float(input(var+valor unitario))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:20:38) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input("valor unitario"))
var2= float(input("frete"))
total= var+var1+var2
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:20:40) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input("valor unitario"))
var2= float(input("frete"))
total= var+var1+var2
print("total")
-- EXECUTION TIME:
0.189395
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
total
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
total
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:20:41) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input("valor unitario"))
var2= float(input("frete"))
total= var+var1+var2
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:02) 
-- CODE:
var= float(input("45"))
var1= float(input("10"))
var2= float(input("25"))
total= var+var1+var2
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:20) 
-- CODE:
var= float(input("45"))
var1= float(input("10"))
var2= float(input("25"))
total= input(var+var1+var2)
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= input(var+var1+var2)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:37) 
-- CODE:
var= float(input("45"))
var= float(input("10"))
var= float(input("25"))
total= input(var+var1+var2)
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= input(var+var1+var2)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:23:16) 
-- CODE:
var= float(input("quantidade de jogos"))
print(var)
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:23:51) 
-- CODE:
var= float(input("quantidade de jogos"))
print(var)
var= float(input(valor unitario))
print(var)
-- ERROR:
File "XXXX", line 3
    var= float(input(valor unitario))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:24:00) 
-- CODE:
var= float(input("quantidade de jogos"))
print(var)
preco= float(input(valor unitario))
print(var)
-- ERROR:
File "XXXX", line 3
    preco= float(input(valor unitario))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:24:15) 
-- CODE:
var= float(input("quantidade de jogos"))
print(var)
preco= float(input("valor unitario"))
print(var)
-- OUTPUT:
12.0
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:24:28) 
-- CODE:
var= float(input("quantidade de jogos"))
print(var)
preco= float(input("valor unitario"))
print(preco)
-- OUTPUT:
12.0
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:24:42) 
-- CODE:
var= float(input("quantidade de jogos"))
print(var)
preco= float(input("valor unitario"))
print(preco+var)
-- OUTPUT:
12.0
57.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:01) 
-- CODE:
var= float(input("44"))
print(var)
preco= float(input("valor unitario"))
print(preco+var)
-- OUTPUT:
12.0
57.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:43) 
-- CODE:
var= float(input("44"))+float(input("45"))
print(var)
preco= float(input("valor unitario"))
print(preco+var)
-- OUTPUT:
57.0
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:25) 
-- CODE:
var= float(input("44*5"))
print(var)
preco= float(input("valor unitario"))
print(preco+var)
-- OUTPUT:
12.0
57.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:53) 
-- CODE:
var= float(input("44*5"))
print(var)

-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:30:10) 
-- CODE:
var1= float(input("quantidade de jogos"))
var2= float(input("valor unitario"))
var3= float(input("valor do frete"))
print(var1+var2+var3)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:30:12) 
-- CODE:
var1= float(input("quantidade de jogos"))
var2= float(input("valor unitario"))
var3= float(input("valor do frete"))
print(var1+var2+var3)
-- EXECUTION TIME:
0.156777
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:30:12) 
-- CODE:
var1= float(input("quantidade de jogos"))
var2= float(input("valor unitario"))
var3= float(input("valor do frete"))
print(var1+var2+var3)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:31:06) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input("valor unitario"))
var2= float(input("valor do frete"))
total= var*var1+var2
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:31:07) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input("valor unitario"))
var2= float(input("valor do frete"))
total= var*var1+var2
print(total)
-- EXECUTION TIME:
0.149787
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:31:08) 
-- CODE:
var= float(input("quantidade de jogos"))
var1= float(input("valor unitario"))
var2= float(input("valor do frete"))
total= var*var1+var2
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
